[project]
name = "still-waiting-discord"
version = "0.1.0"
description = "A Discord bot that reminds users to reply when mentioned"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "firebase-admin>=6.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]
